--- a/1.0/en/kap-orgusu/aralik-duzeni.html
+++ b/1.0/en/kap-orgusu/aralik-duzeni.html
@@ -1,5 +1,5 @@
---- 
-layout: s1n0/default 
+---
+layout: s1n0/default
 title: Space Layout - Grid System
 ---
 	<p class="girlik">
@@ -17,24 +17,24 @@ title: Space Layout - Grid System
 	  <h3>Preview</h3>
 	  <div class="önizleme">
 	    <div data-gnl="space-between">
-	      <div data-gnl="1 8p">
+	      <div data-gnl="1 /8">
 	        space-between
 	      </div>
-	      <div data-gnl="1 8p">
+	      <div data-gnl="1 /8">
 	        space-between
 	      </div>
-	      <div data-gnl="1 8p">
+	      <div data-gnl="1 /8">
 	        space-between
 	      </div>
 	    </div>
 	    <div data-gnl="space-around">
-	      <div data-gnl="1 8p">
+	      <div data-gnl="1 /8">
 	        space-around
 	      </div>
-	      <div data-gnl="1 8p">
+	      <div data-gnl="1 /8">
 	        space-around
 	      </div>
-	      <div data-gnl="1 8p">
+	      <div data-gnl="1 /8">
 	        space-around
 	      </div>
 	    </div>
@@ -42,24 +42,24 @@ title: Space Layout - Grid System
 	</div>
 	{% highlight html %}
     <div data-gnl="space-between">
-      <div data-gnl="1 8p">
+      <div data-gnl="1 /8">
         space-between
       </div>
-      <div data-gnl="1 8p">
+      <div data-gnl="1 /8">
         space-between
       </div>
-      <div data-gnl="1 8p">
+      <div data-gnl="1 /8">
         space-between
       </div>
     </div>
     <div data-gnl="space-around">
-      <div data-gnl="1 8p">
+      <div data-gnl="1 /8">
         space-around
       </div>
-      <div data-gnl="1 8p">
+      <div data-gnl="1 /8">
         space-around
       </div>
-      <div data-gnl="1 8p">
+      <div data-gnl="1 /8">
         space-around
       </div>
     </div>
@@ -88,7 +88,7 @@ title: Space Layout - Grid System
 	      <div>
 	        <div class="kart">5</div>
 	      </div>
-	      <div data-gnl="2 5p">
+	      <div data-gnl="2 /5">
 	        <div class="kart">6</div>
 	      </div>
 	      <div>
@@ -103,7 +103,7 @@ title: Space Layout - Grid System
 	      <div>
 	        <div class="kart">10</div>
 	      </div>
-	      <div data-gnl="3 5p">
+	      <div data-gnl="3 /5">
 	        <div class="kart">11</div>
 	      </div>
 	      <div>
@@ -129,7 +129,7 @@ title: Space Layout - Grid System
       <div>
         <div class="kart">5</div>
       </div>
-      <div data-gnl="2 5p">
+      <div data-gnl="2 /5">
         <div class="kart">6</div>
       </div>
       <div>
@@ -144,7 +144,7 @@ title: Space Layout - Grid System
       <div>
         <div class="kart">10</div>
       </div>
-      <div data-gnl="3 5p">
+      <div data-gnl="3 /5">
         <div class="kart">11</div>
       </div>
       <div>
