--- a/1.0/en/kap-orgusu/dizem-duzeni.html
+++ b/1.0/en/kap-orgusu/dizem-duzeni.html
@@ -58,8 +58,8 @@ title: Rhythm Layout - Grid System
       <div>
         four-four
       </div>
-      <div data-gnl="2 4p">
-        2 4p
+      <div data-gnl="2 /4">
+        2 /4
       </div>
       <div>
         four-four
@@ -83,8 +83,8 @@ title: Rhythm Layout - Grid System
     <div>
       four-four
     </div>
-    <div data-gnl="2 4p">
-      2 4p
+    <div data-gnl="2 /4">
+      2 /4
     </div>
     <div>
       four-four
@@ -113,11 +113,11 @@ title: Rhythm Layout - Grid System
   <h3>Preview</h3>
   <div class="önizleme">
     <div data-gnl="4r">
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 /">
+        1 /
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 /">
+        2 /
       </div>
       <div>
         four-four
@@ -138,11 +138,11 @@ title: Rhythm Layout - Grid System
   </div>
   {% highlight html %}
   <div data-gnl="4r">
-    <div data-gnl="1g">
-      1g
+    <div data-gnl="1 /">
+      1 /
     </div>
-    <div data-gnl="2g">
-      2g
+    <div data-gnl="2 /">
+      2 /
     </div>
     <div>
       four-four
@@ -170,14 +170,14 @@ title: Rhythm Layout - Grid System
   <h3>Preview</h3>
   <div class="önizleme">
     <div data-gnl="4r">
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 /">
+        1 /
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 /">
+        2 /
       </div>
-      <div data-gnl="2 4p">
-        2 4p
+      <div data-gnl="2 /4">
+        2 /4
       </div>
       <div>
         four-four
@@ -195,14 +195,14 @@ title: Rhythm Layout - Grid System
   </div>
   {% highlight html %}
   <div data-gnl="4r">
-    <div data-gnl="1g">
-      1g
+    <div data-gnl="1 /">
+      1 /
     </div>
-    <div data-gnl="2g">
-      2g
+    <div data-gnl="2 /">
+      2 /
     </div>
-    <div data-gnl="2 4p">
-      2 4p
+    <div data-gnl="2 /4">
+      2 /4
     </div>
     <div>
       four-four
