--- a/1.0/en/kap-orgusu/konumlama.html
+++ b/1.0/en/kap-orgusu/konumlama.html
@@ -16,29 +16,29 @@ title: Positioning - Grid System
     <h3>Preview</h3>
     <div class="önizleme">
       <div style="height:300px;">
-        <div data-gnl="1 3p ft">ft: leFt Top</div>
-        <div data-gnl="1 3p t">t: Top</div>
-        <div data-gnl="1 3p th">th: Top rigHt</div>
-        <div data-gnl="1 3p f">f: leFt</div>
-        <div data-gnl="1 3p g">g: oriGin</div>
-        <div data-gnl="1 3p h">h: rigHt</div>
-        <div data-gnl="1 3p fb">fb: leFt Bottom</div>
-        <div data-gnl="1 3p b">b: Bottom</div>
-        <div data-gnl="1 3p bh">bh: Bottom rigHt</div>
+        <div data-gnl="1 /3 ft">ft: leFt Top</div>
+        <div data-gnl="1 /3 t">t: Top</div>
+        <div data-gnl="1 /3 th">th: Top rigHt</div>
+        <div data-gnl="1 /3 f">f: leFt</div>
+        <div data-gnl="1 /3 g">g: oriGin</div>
+        <div data-gnl="1 /3 h">h: rigHt</div>
+        <div data-gnl="1 /3 fb">fb: leFt Bottom</div>
+        <div data-gnl="1 /3 b">b: Bottom</div>
+        <div data-gnl="1 /3 bh">bh: Bottom rigHt</div>
       </div>
     </div>
   </div>
   {% highlight html %}
     <div style="height:300px;">
-      <div data-gnl="1 3p ft">ft: leFt Top</div>
-      <div data-gnl="1 3p t">t: Top</div>
-      <div data-gnl="1 3p th">th: Top rigHt</div>
-      <div data-gnl="1 3p f">f: leFt</div>
-      <div data-gnl="1 3p g">g: oriGin</div>
-      <div data-gnl="1 3p h">h: rigHt</div>
-      <div data-gnl="1 3p fb">fb: leFt Bottom</div>
-      <div data-gnl="1 3p b">b: Bottom</div>
-      <div data-gnl="1 3p bh">bh: Bottom rigHt</div>
+      <div data-gnl="1 /3 ft">ft: leFt Top</div>
+      <div data-gnl="1 /3 t">t: Top</div>
+      <div data-gnl="1 /3 th">th: Top rigHt</div>
+      <div data-gnl="1 /3 f">f: leFt</div>
+      <div data-gnl="1 /3 g">g: oriGin</div>
+      <div data-gnl="1 /3 h">h: rigHt</div>
+      <div data-gnl="1 /3 fb">fb: leFt Bottom</div>
+      <div data-gnl="1 /3 b">b: Bottom</div>
+      <div data-gnl="1 /3 bh">bh: Bottom rigHt</div>
     </div>
   {% endhighlight %}
 
@@ -46,49 +46,49 @@ title: Positioning - Grid System
     <h3>Preview</h3>
     <div class="önizleme">
       <div data-gnl="f">
-        <div data-gnl="1 3p">f: leFt</div>
+        <div data-gnl="1 /3">f: leFt</div>
       </div>
       <div data-gnl="g">
-        <div data-gnl="1 3p">g: oriGin</div>
+        <div data-gnl="1 /3">g: oriGin</div>
       </div>
       <div data-gnl="h">
-        <div data-gnl="1 3p">h: rigHt</div>
+        <div data-gnl="1 /3">h: rigHt</div>
       </div>
     </div>
   </div>
   {% highlight html %}
     <div data-gnl="f">
-      <div data-gnl="1 3p">f: leFt</div>
+      <div data-gnl="1 /3">f: leFt</div>
     </div>
     <div data-gnl="g">
-      <div data-gnl="1 3p">g: oriGin</div>
+      <div data-gnl="1 /3">g: oriGin</div>
     </div>
     <div data-gnl="h">
-      <div data-gnl="1 3p">h: rigHt</div>
+      <div data-gnl="1 /3">h: rigHt</div>
     </div>
   {% endhighlight %}
   <div class="örnek">
     <h3>Preview</h3>
     <div class="önizleme">
-      <div data-gnl="1 3p t" style="height:300px;">
+      <div data-gnl="1 /3 t" style="height:300px;">
         <div>t: Top</div>
       </div>
-      <div data-gnl="1 3p g" style="height:300px;">
+      <div data-gnl="1 /3 g" style="height:300px;">
         <div>g: oriGin</div>
       </div>
-      <div data-gnl="1 3p b" style="height:300px;">
+      <div data-gnl="1 /3 b" style="height:300px;">
         <div>b: Bottom</div>
       </div>
     </div>
   </div>
   {% highlight html %}
-    <div data-gnl="1 3p t" style="height:300px;">
+    <div data-gnl="1 /3 t" style="height:300px;">
       <div>t: Top</div>
     </div>
-    <div data-gnl="1 3p g" style="height:300px;">
+    <div data-gnl="1 /3 g" style="height:300px;">
       <div>g: oriGin</div>
     </div>
-    <div data-gnl="1 3p b" style="height:300px;">
+    <div data-gnl="1 /3 b" style="height:300px;">
       <div>b: Bottom</div>
     </div>
   {% endhighlight %}
@@ -101,79 +101,79 @@ title: Positioning - Grid System
     <h3>Preview</h3>
     <div class="önizleme">
       <div style="height:150px;">
-        <div data-gnl="3 10p _t">_t: Top itself</div>
-        <div data-gnl="3 10p _g">_g: oriGin itself</div>
-        <div data-gnl="3 10p _b">_b: Bottom itself</div>
+        <div data-gnl="3 /10 _t">_t: Top itself</div>
+        <div data-gnl="3 /10 _g">_g: oriGin itself</div>
+        <div data-gnl="3 /10 _b">_b: Bottom itself</div>
       </div>
       <div style="height:150px;">
-        <div data-gnl="3 10p _l">_f: leFt itself</div>
-        <div data-gnl="3 10p _o">_g: oriGin itself</div>
-        <div data-gnl="3 10p _s">_h: rigHt itself</div>
+        <div data-gnl="3 /10 _l">_f: leFt itself</div>
+        <div data-gnl="3 /10 _o">_g: oriGin itself</div>
+        <div data-gnl="3 /10 _s">_h: rigHt itself</div>
       </div>
       <div style="height:150px;">
-        <div data-gnl="3 10p _lt">_ft: leFt Top itself</div>
-        <div data-gnl="3 10p _as">_bh: Bottom rigHt itself</div>
+        <div data-gnl="3 /10 _lt">_ft: leFt Top itself</div>
+        <div data-gnl="3 /10 _as">_bh: Bottom rigHt itself</div>
       </div>
       <div style="height:150px;">
-        <div data-gnl="3 10p _la">_fb: leFt Bottom itself</div>
-        <div data-gnl="3 10p _ts">_th: Top rigHt itself</div>
+        <div data-gnl="3 /10 _la">_fb: leFt Bottom itself</div>
+        <div data-gnl="3 /10 _ts">_th: Top rigHt itself</div>
       </div>
     </div>
   </div>
   {% highlight html %}
     <div style="height:150px;">
-      <div data-gnl="3 10p _f">_f: Top itself</div>
-      <div data-gnl="3 10p _g">_g: oriGin itself</div>
-      <div data-gnl="3 10p _b">_b: Bottom itself</div>
+      <div data-gnl="3 /10 _f">_f: Top itself</div>
+      <div data-gnl="3 /10 _g">_g: oriGin itself</div>
+      <div data-gnl="3 /10 _b">_b: Bottom itself</div>
     </div>
     <div style="height:150px;">
-      <div data-gnl="3 10p _l">_f: leFt itself</div>
-      <div data-gnl="3 10p _o">_g: oriGin itself</div>
-      <div data-gnl="3 10p _s">_h: rigHt itself</div>
+      <div data-gnl="3 /10 _l">_f: leFt itself</div>
+      <div data-gnl="3 /10 _o">_g: oriGin itself</div>
+      <div data-gnl="3 /10 _s">_h: rigHt itself</div>
     </div>
     <div style="height:150px;">
-      <div data-gnl="3 10p _lt">_ft: leFt Top itself</div>
-      <div data-gnl="3 10p _as">_bh: Bottom rigHt itself</div>
+      <div data-gnl="3 /10 _lt">_ft: leFt Top itself</div>
+      <div data-gnl="3 /10 _as">_bh: Bottom rigHt itself</div>
     </div>
     <div style="height:150px;">
-      <div data-gnl="3 10p _la">_fb: leFt Bottom itself</div>
-      <div data-gnl="3 10p _ts">_th: Top rigHt itself</div>
+      <div data-gnl="3 /10 _la">_fb: leFt Bottom itself</div>
+      <div data-gnl="3 /10 _ts">_th: Top rigHt itself</div>
     </div>
   {% endhighlight %}
 
-  <h3>Positioning: <span data-metin="dikkat">left|right-NUMBER NUMBERp-spacing</span></h3>
+  <h3>Positioning: <span data-metin="dikkat">left|right-NUMBER /NUMBER-spacing</span></h3>
   <p>
     If we want to spacing an item relative to the left or right piece layout, we use this positioning feature. If you use it without changing the piece scale, it is enough to write left | right-NUMBER.
   </p>
   <div class="örnek">
     <h3>Preview</h3>
     <div class="önizleme">
-      <div data-gnl="1 3p left-1 6p-spacing">
-        1 3p left-1 6p-spacing
+      <div data-gnl="1 /3 left-1 /6-spacing">
+        1 /3 left-1 /6-spacing
       </div>
-      <div data-gnl="1 3p left-2 19p-spacing">
-        1 3p left-2 19p-spacing
+      <div data-gnl="1 /3 left-2 /19-spacing">
+        1 /3 left-2 /19-spacing
       </div>
-      <div data-gnl="1 3p right-2">
-        1 3p right-2
+      <div data-gnl="1 /3 right-2">
+        1 /3 right-2
       </div>
-      <div data-gnl="2 3p">
-        2 3p
+      <div data-gnl="2 /3">
+        2 /3
       </div>
     </div>
   </div>
   {% highlight html %}
-    <div data-gnl="1 3p left-1 6p-spacing">
-      1 3p left-1 6p-spacing
+    <div data-gnl="1 /3 left-1 /6-spacing">
+      1 /3 left-1 /6-spacing
     </div>
-    <div data-gnl="1 3p left-2 19p-spacing">
-      1 3p left-2 19p-spacing
+    <div data-gnl="1 /3 left-2 /19-spacing">
+      1 /3 left-2 /19-spacing
     </div>
-    <div data-gnl="1 3p right-2">
-      1 3p right-2
+    <div data-gnl="1 /3 right-2">
+      1 /3 right-2
     </div>
-    <div data-gnl="2 3p">
-      2 3p
+    <div data-gnl="2 /3">
+      2 /3
     </div>
   {% endhighlight %}
   
@@ -190,17 +190,17 @@ title: Positioning - Grid System
     <h3>Önizleme</h3>
     <div class="önizleme">
       <div data-gnl="solda">
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           solda
         </div>
       </div>
       <div data-gnl="ortada">
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           ortada
         </div>
       </div>
       <div data-gnl="sağda">
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           sağda
         </div>
       </div>
@@ -208,17 +208,17 @@ title: Positioning - Grid System
   </div>
   {% highlight html %}
     <div data-gnl="solda">
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         solda
       </div>
     </div>
     <div data-gnl="ortada">
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         ortada
       </div>
     </div>
     <div data-gnl="sağda">
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         sağda
       </div>
     </div>
@@ -236,7 +236,7 @@ title: Positioning - Grid System
   <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
-      <div data-gnl="1 3p üstte" style="height:500px;">
+      <div data-gnl="1 /3 üstte" style="height:500px;">
         <div>
           üstte
         </div>
@@ -247,7 +247,7 @@ title: Positioning - Grid System
           üstte
         </div>
       </div>
-      <div data-gnl="1 3p göbekte" style="height:500px;">
+      <div data-gnl="1 /3 göbekte" style="height:500px;">
         <div>
           göbekte
         </div>
@@ -258,7 +258,7 @@ title: Positioning - Grid System
           göbekte
         </div>
       </div>
-      <div data-gnl="1 3p altta" style="height:500px;">
+      <div data-gnl="1 /3 altta" style="height:500px;">
         <div>
           altta
         </div>
@@ -272,7 +272,7 @@ title: Positioning - Grid System
     </div>
   </div>
   {% highlight html %}
-    <div data-gnl="1 3p üstte" style="height:500px;">
+    <div data-gnl="1 /3 üstte" style="height:500px;">
       <div>
         üstte
       </div>
@@ -283,7 +283,7 @@ title: Positioning - Grid System
         üstte
       </div>
     </div>
-    <div data-gnl="1 3p göbekte" style="height:500px;">
+    <div data-gnl="1 /3 göbekte" style="height:500px;">
       <div>
         göbekte
       </div>
@@ -294,7 +294,7 @@ title: Positioning - Grid System
         göbekte
       </div>
     </div>
-    <div data-gnl="1 3p altta" style="height:500px;">
+    <div data-gnl="1 /3 altta" style="height:500px;">
       <div>
         altta
       </div>
@@ -314,7 +314,7 @@ title: Positioning - Grid System
   <div class="örnek">
     <h3>Preview</h3>
     <div class="önizleme">
-      <div data-gnl="1 2p stretch" style="height:500px;">
+      <div data-gnl="1 /2 stretch" style="height:500px;">
         <div data-gnl="0">
           stretch
         </div>
@@ -325,7 +325,7 @@ title: Positioning - Grid System
           stretch
         </div>
       </div>
-      <div data-gnl="1 2p" style="height:500px;">
+      <div data-gnl="1 /2" style="height:500px;">
         <div data-gnl="0 lt">
           lt: left-top
         </div>
@@ -339,7 +339,7 @@ title: Positioning - Grid System
     </div>
   </div>
   {% highlight html %}
-    <div data-gnl="1 2p stretch" style="height:500px;">
+    <div data-gnl="1 /2 stretch" style="height:500px;">
       <div data-gnl="0">
         stretch
       </div>
@@ -350,7 +350,7 @@ title: Positioning - Grid System
         stretch
       </div>
     </div>
-    <div data-gnl="1 2p" style="height:500px;">
+    <div data-gnl="1 /2" style="height:500px;">
       <div data-gnl="0 lt">
         lt: left-top
       </div>
@@ -433,53 +433,53 @@ title: Positioning - Grid System
     <h3>Preview</h3>
     <div class="önizleme">
       <div data-gnl="wrap-reverse">
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           wrap-reverse #1
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           wrap-reverse #2
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           wrap-reverse #3
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           wrap-reverse #4
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           wrap-reverse #5
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           wrap-reverse #6
         </div>
       </div>
       <div data-gnl="row-reverse">
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           row-reverse #1
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           row-reverse #2
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           row-reverse #3
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           row-reverse #4
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           row-reverse #5
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           row-reverse #6
         </div>
       </div>
       <div data-gnl="col-reverse">
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           col-reverse #1
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           col-reverse #2
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           col-reverse #3
         </div>
       </div>
@@ -487,53 +487,53 @@ title: Positioning - Grid System
   </div>
   {% highlight html %}
     <div data-gnl="wrap-reverse">
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         wrap-reverse #1
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         wrap-reverse #2
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         wrap-reverse #3
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         wrap-reverse #4
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         wrap-reverse #5
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         wrap-reverse #6
       </div>
     </div>
     <div data-gnl="row-reverse">
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         row-reverse #1
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         row-reverse #2
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         row-reverse #3
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         row-reverse #4
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         row-reverse #5
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         row-reverse #6
       </div>
     </div>
     <div data-gnl="col-reverse">
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         col-reverse #1
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         col-reverse #2
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         col-reverse #3
       </div>
     </div>
