--- a/1.0/tr/kap-orgusu/aralik-duzeni.html
+++ b/1.0/tr/kap-orgusu/aralik-duzeni.html
@@ -5,54 +5,54 @@ title: Aralık Düzeni
 	<p class="girlik">
 	  Ögeler arası aralıklar bırakarak daha estetik görünüm oluşturun. Kendiliğinden hesaplanan aralık genişlikleri, sabit aralık genişlikleri gibi bir kaç seçenekten istediğinizi kullanın. Daha fazlası aşağıda.
 	</p>
-	<h3>Soldan Sağdan Aralık: SAYI-| |-SAYI SAYIp-| |-SAYIp</h3>
+	<h3>Soldan Sağdan Aralık: SAYI-| |-SAYI /SAYI-| |-/SAYI</h3>
 	<p>
 		Bir ögeyi soldan veya sağdan parça düzenine göre öteleyerek aralıklamak istiyorsak bu özelliği kullanırız.
-		Diyelim ki 12p'lik düzende 3'lük parça genişliğinde bir div etiketi oluşturdunuz. Sol yanından 3 kadar ve sağ yanından 3 kadar öteleme yapmak istiyorsanız aşağıdaki örnek gibi kullanabilirsiniz. Bu belletiden yola çıkarak aşağıda ek olarak eklenmiş diğer kullanımları da inceleyebilirsiniz.
+		Diyelim ki /12'lik düzende 3'lük parça genişliğinde bir div etiketi oluşturdunuz. Sol yanından 3 kadar ve sağ yanından 3 kadar öteleme yapmak istiyorsanız aşağıdaki örnek gibi kullanabilirsiniz. Bu belletiden yola çıkarak aşağıda ek olarak eklenmiş diğer kullanımları da inceleyebilirsiniz.
 		<br>
 		-: aralık anlamına gelir. <br>
 		|: yan anlamına gelir. <br>
 		|-: sağ yan anlamına gelir. <br>
 		-|: sol yan anlamına gelir. <br>
 
-		Bunlarla birlikte eğer SAYIp tanımlanmışsa aralık verme düzeninin hangi düzende olacağı tanımlanmıştır. Eğer bunlarla birlikte olmadan SAYIp düzeni tanımlanmışsa bu etiket için her şey SAYIp düzeninde oluşturulur.
+		Bunlarla birlikte eğer /SAYI tanımlanmışsa aralık verme düzeninin hangi düzende olacağı tanımlanmıştır. Eğer bunlarla birlikte olmadan /SAYI düzeni tanımlanmışsa bu etiket için her şey /SAYI düzeninde oluşturulur.
 
 	</p>
 	<div class="örnek">
 	<h3>Önizleme</h3>
 	<div class="önizleme">
-	  <div data-gnl="3-| 3 |-3 24p">
-	  	3-| 3 |-3 24p
+	  <div data-gnl="3-| 3 |-3 /24">
+	  	3-| 3 |-3 /24
 	  </div>
 	  <div data-gnl="3-| 6 |-3">
 	    3-| 6 |-3
 	  </div>
-	  <div data-gnl="3-| 6 |-3 24p-| |-24p">
-	    3-| 6 |-3 24p-| |-24p
+	  <div data-gnl="6-| 6 |-6 /24-| |-/24">
+	    6-| 6 |-6 /24-| |-/24
 	  </div>
-	  <div data-gnl="3-| 2 % |-3">
-	    3-| 2 % |-3
+	  <div data-gnl="1-| 2 / |-1">
+		1-| 2 / |-1
 	  </div>
-	  <div data-gnl="3-| 3 % |-3">
-	    3-| 3 % |-3
-	  </div>
+	  <div data-gnl="1-| 3 / |-1">
+		1-| 3 / |-1
+	  </div>		
 	</div>
 	</div>
 	{% highlight html %}
-	<div data-gnl="3-| 3 |-3 24p">
-	  3-| 3 |-3 24p
+	<div data-gnl="3-| 3 |-3 /24">
+	  3-| 3 |-3 /24
 	</div>
 	<div data-gnl="3-| 6 |-3">
 	  3-| 6 |-3
 	</div>
-	<div data-gnl="3-| 6 |-3 24p-| |-24p">
-	  3-| 6 |-3 24p-| |-24p
+	<div data-gnl="6-| 6 |-6 /24-| |-/24">
+	  6-| 6 |-6 /24-| |-/24
 	</div>
-	<div data-gnl="3-| 2 % |-3">
-	  3-| 2 % |-3
+	<div data-gnl="1-| 2 / |-1">
+	  1-| 2 / |-1
 	</div>
-	<div data-gnl="3-| 3 % |-3">
-	  3-| 3 % |-3
+	<div data-gnl="1-| 3 / |-1">
+	  1-| 3 / |-1
 	</div>
 	{% endhighlight %}
 
@@ -69,24 +69,24 @@ title: Aralık Düzeni
 	  <h3>Önizleme</h3>
 	  <div class="önizleme">
 	    <div data-gnl="araları-aralık">
-	      <div data-gnl="1 8p">
+	      <div data-gnl="1 /8">
 	        araları-aralık
 	      </div>
-	      <div data-gnl="1 8p">
+	      <div data-gnl="1 /8">
 	        araları-aralık
 	      </div>
-	      <div data-gnl="1 8p">
+	      <div data-gnl="1 /8">
 	        araları-aralık
 	      </div>
 	    </div>
 	    <div data-gnl="dengeli-aralık">
-	      <div data-gnl="1 8p">
+	      <div data-gnl="1 /8">
 	        dengeli-aralık
 	      </div>
-	      <div data-gnl="1 8p">
+	      <div data-gnl="1 /8">
 	        dengeli-aralık
 	      </div>
-	      <div data-gnl="1 8p">
+	      <div data-gnl="1 /8">
 	        dengeli-aralık
 	      </div>
 	    </div>
@@ -94,24 +94,24 @@ title: Aralık Düzeni
 	</div>
 	{% highlight html %}
 	<div data-gnl="araları-aralık">
-	  <div data-gnl="1 8p">
+	  <div data-gnl="1 /8">
 	    araları-aralık
 	  </div>
-	  <div data-gnl="1 8p">
+	  <div data-gnl="1 /8">
 	    araları-aralık
 	  </div>
-	  <div data-gnl="1 8p">
+	  <div data-gnl="1 /8">
 	    araları-aralık
 	  </div>
 	</div>
 	<div data-gnl="dengeli-aralık">
-	  <div data-gnl="1 8p">
+	  <div data-gnl="1 /8">
 	    dengeli-aralık
 	  </div>
-	  <div data-gnl="1 8p">
+	  <div data-gnl="1 /8">
 	    dengeli-aralık
 	  </div>
-	  <div data-gnl="1 8p">
+	  <div data-gnl="1 /8">
 	    dengeli-aralık
 	  </div>
 	</div>
@@ -126,40 +126,40 @@ title: Aralık Düzeni
 	  <div class="önizleme-1">
 	    <div data-gnl="araları-aralık-1 5r">
 	      <div>
-	        <div class="kart">1</div>
+	        <div class="kart">1. öğe</div>
 	      </div>
 	      <div>
-	        <div class="kart">2</div>
+	        <div class="kart">2. öğe</div>
 	      </div>
 	      <div>
-	        <div class="kart">3</div>
+	        <div class="kart">3. öğe</div>
 	      </div>
 	      <div>
-	        <div class="kart">4</div>
+	        <div class="kart">4. öğe</div>
 	      </div>
 	      <div>
-	        <div class="kart">5</div>
+	        <div class="kart">5. öğe</div>
 	      </div>
-	      <div data-gnl="2 5p">
-	        <div class="kart">6</div>
-	      </div>
-	      <div>
-	        <div class="kart">7</div>
+	      <div data-gnl="2 /5">
+	        <div class="kart">6. öğe</div>
 	      </div>
 	      <div>
-	        <div class="kart">8</div>
+	        <div class="kart">7. öğe</div>
 	      </div>
 	      <div>
-	        <div class="kart">9</div>
+	        <div class="kart">8. öğe</div>
 	      </div>
 	      <div>
-	        <div class="kart">10</div>
-	      </div>
-	      <div data-gnl="3 5p">
-	        <div class="kart">11</div>
+	        <div class="kart">9. öğe</div>
 	      </div>
 	      <div>
-	        <div class="kart">12</div>
+	        <div class="kart">10. öğe</div>
+	      </div>
+	      <div data-gnl="3 /5">
+	        <div class="kart">11. öğe</div>
+	      </div>
+	      <div>
+	        <div class="kart">12. öğe</div>
 	      </div>
 	    </div>
 	  </div>
@@ -167,40 +167,40 @@ title: Aralık Düzeni
 	{% highlight html %}
     <div data-gnl="araları-aralık-1 5r">
       <div>
-        <div class="kart">1</div>
+        <div class="kart">1. öğe</div>
       </div>
       <div>
-        <div class="kart">2</div>
+        <div class="kart">2. öğe</div>
       </div>
       <div>
-        <div class="kart">3</div>
+        <div class="kart">3. öğe</div>
       </div>
       <div>
-        <div class="kart">4</div>
+        <div class="kart">4. öğe</div>
       </div>
       <div>
-        <div class="kart">5</div>
+        <div class="kart">5. öğe</div>
       </div>
-      <div data-gnl="2 5p">
-        <div class="kart">6</div>
-      </div>
-      <div>
-        <div class="kart">7</div>
+      <div data-gnl="2 /5">
+        <div class="kart">6. öğe</div>
       </div>
       <div>
-        <div class="kart">8</div>
+        <div class="kart">7. öğe</div>
       </div>
       <div>
-        <div class="kart">9</div>
+        <div class="kart">8. öğe</div>
       </div>
       <div>
-        <div class="kart">10</div>
-      </div>
-      <div data-gnl="3 5p">
-        <div class="kart">11</div>
+        <div class="kart">9. öğe</div>
       </div>
       <div>
-        <div class="kart">12</div>
+        <div class="kart">10. öğe</div>
+      </div>
+      <div data-gnl="3 /5">
+        <div class="kart">11. öğe</div>
+      </div>
+      <div>
+        <div class="kart">12. öğe</div>
       </div>
     </div>
 	{% endhighlight %}
