--- a/1.0/tr/kap-orgusu/dizem-duzeni.html
+++ b/1.0/tr/kap-orgusu/dizem-duzeni.html
@@ -60,8 +60,8 @@ title: Dizem Düzeni - Kap Örgüsü
       <div>
         dörder dörder
       </div>
-      <div data-gnl="2 4p">
-        2 4p
+      <div data-gnl="2 /4">
+        2 /4
       </div>
       <div>
         dörder dörder
@@ -85,8 +85,8 @@ title: Dizem Düzeni - Kap Örgüsü
     <div>
       dörder dörder
     </div>
-    <div data-gnl="2 4p">
-      2 4p
+    <div data-gnl="2 /4">
+      2 /4
     </div>
     <div>
       dörder dörder
@@ -117,11 +117,11 @@ title: Dizem Düzeni - Kap Örgüsü
   <h3>Örnek</h3>
   <div class="önizleme">
     <div data-gnl="4r">
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 /">
+        1 /
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 /">
+        2 /
       </div>
       <div>
         dörder dörder
@@ -142,11 +142,11 @@ title: Dizem Düzeni - Kap Örgüsü
   </div>
   {% highlight html %}
   <div data-gnl="4r">
-    <div data-gnl="1g">
-      1g
+    <div data-gnl="1 /">
+      1 /
     </div>
-    <div data-gnl="2g">
-      2g
+    <div data-gnl="2 /">
+      2 /
     </div>
     <div>
       dörder dörder
@@ -176,14 +176,14 @@ title: Dizem Düzeni - Kap Örgüsü
   <h3>Örnek</h3>
   <div class="önizleme">
     <div data-gnl="4r">
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 /">
+        1 /
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 /">
+        2 /
       </div>
-      <div data-gnl="2 4p">
-        2 4p
+      <div data-gnl="2 /4">
+        2 /4
       </div>
       <div>
         dörder dörder
@@ -201,14 +201,14 @@ title: Dizem Düzeni - Kap Örgüsü
   </div>
   {% highlight html %}
   <div data-gnl="4r">
-    <div data-gnl="1g">
-      1g
+    <div data-gnl="1 /">
+      1 /
     </div>
-    <div data-gnl="2g">
-      2g
+    <div data-gnl="2 /">
+      2 /
     </div>
-    <div data-gnl="2 4p">
-      2 4p
+    <div data-gnl="2 /4">
+      2 /4
     </div>
     <div>
       dörder dörder
