--- a/1.0/tr/kap-orgusu/konumlama.html
+++ b/1.0/tr/kap-orgusu/konumlama.html
@@ -16,29 +16,29 @@ title: Konumlama - Kap Örgüsü
     <h3>Önizleme</h3>
     <div class="önizleme">
       <div style="height:300px;">
-        <div data-gnl="1 3p lt">lt: solüst</div>
-        <div data-gnl="1 3p t">t: üst</div>
-        <div data-gnl="1 3p ts">ts: üstsağ</div>
-        <div data-gnl="1 3p l">l: sol</div>
-        <div data-gnl="1 3p o">o: orta</div>
-        <div data-gnl="1 3p s">s: sağ</div>
-        <div data-gnl="1 3p la">la: solalt</div>
-        <div data-gnl="1 3p a">a: alt</div>
-        <div data-gnl="1 3p as">as: altsağ</div>
+        <div data-gnl="4 lt">lt: solüst</div>
+        <div data-gnl="4 t">t: üst</div>
+        <div data-gnl="4 ts">ts: üstsağ</div>
+        <div data-gnl="4 l">l: sol</div>
+        <div data-gnl="4 o">o: orta</div>
+        <div data-gnl="4 s">s: sağ</div>
+        <div data-gnl="4 la">la: solalt</div>
+        <div data-gnl="4 a">a: alt</div>
+        <div data-gnl="4 as">as: altsağ</div>
       </div>
     </div>
   </div>
   {% highlight html %}
     <div style="height:300px;">
-      <div data-gnl="1 3p lt">lt: solüst</div>
-      <div data-gnl="1 3p t">t: üst</div>
-      <div data-gnl="1 3p ts">ts: üstsağ</div>
-      <div data-gnl="1 3p l">l: sol</div>
-      <div data-gnl="1 3p o">o: orta</div>
-      <div data-gnl="1 3p s">s: sağ</div>
-      <div data-gnl="1 3p la">la: solalt</div>
-      <div data-gnl="1 3p a">a: alt</div>
-      <div data-gnl="1 3p as">as: altsağ</div>
+      <div data-gnl="4 lt">lt: solüst</div>
+      <div data-gnl="4 t">t: üst</div>
+      <div data-gnl="4 ts">ts: üstsağ</div>
+      <div data-gnl="4 l">l: sol</div>
+      <div data-gnl="4 o">o: orta</div>
+      <div data-gnl="4 s">s: sağ</div>
+      <div data-gnl="4 la">la: solalt</div>
+      <div data-gnl="4 a">a: alt</div>
+      <div data-gnl="4 as">as: altsağ</div>
     </div>
   {% endhighlight %}
 
@@ -46,49 +46,49 @@ title: Konumlama - Kap Örgüsü
     <h3>Önizleme</h3>
     <div class="önizleme">
       <div data-gnl="l">
-        <div data-gnl="1 3p">l: sol</div>
+        <div data-gnl="1 /3">l: sol</div>
       </div>
       <div data-gnl="o">
-        <div data-gnl="1 3p">o: orta</div>
+        <div data-gnl="1 /3">o: orta</div>
       </div>
       <div data-gnl="s">
-        <div data-gnl="1 3p">s: sağ</div>
+        <div data-gnl="1 /3">s: sağ</div>
       </div>
     </div>
   </div>
   {% highlight html %}
     <div data-gnl="l">
-      <div data-gnl="1 3p">l: sol</div>
+      <div data-gnl="1 /3">l: sol</div>
     </div>
     <div data-gnl="o">
-      <div data-gnl="1 3p">o: orta</div>
+      <div data-gnl="1 /3">o: orta</div>
     </div>
     <div data-gnl="s">
-      <div data-gnl="1 3p">s: sağ</div>
+      <div data-gnl="1 /3">s: sağ</div>
     </div>
   {% endhighlight %}
   <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
-      <div data-gnl="1 3p t" style="height:300px;">
+      <div data-gnl="1 /3 t" style="height:300px;">
         <div>t: üst</div>
       </div>
-      <div data-gnl="1 3p o" style="height:300px;">
+      <div data-gnl="1 /3 o" style="height:300px;">
         <div>o: orta</div>
       </div>
-      <div data-gnl="1 3p a" style="height:300px;">
+      <div data-gnl="1 /3 a" style="height:300px;">
         <div>a: alt</div>
       </div>
     </div>
   </div>
   {% highlight html %}
-    <div data-gnl="1 3p t" style="height:300px;">
+    <div data-gnl="1 /3 t" style="height:300px;">
       <div>t: üst</div>
     </div>
-    <div data-gnl="1 3p o" style="height:300px;">
+    <div data-gnl="1 /3 o" style="height:300px;">
       <div>o: orta</div>
     </div>
-    <div data-gnl="1 3p a" style="height:300px;">
+    <div data-gnl="1 /3 a" style="height:300px;">
       <div>a: alt</div>
     </div>
   {% endhighlight %}
@@ -101,43 +101,43 @@ title: Konumlama - Kap Örgüsü
     <h3>Önizleme</h3>
     <div class="önizleme">
       <div style="height:150px;">
-        <div data-gnl="3 10p _t">_t: kendisi üst</div>
-        <div data-gnl="3 10p _o">_o: kendisi orta</div>
-        <div data-gnl="3 10p _a">_a: kendisi alt</div>
+        <div data-gnl="3 /10 _t">_t: kendisi üst</div>
+        <div data-gnl="3 /10 _o">_o: kendisi orta</div>
+        <div data-gnl="3 /10 _a">_a: kendisi alt</div>
       </div>
       <div style="height:150px;">
-        <div data-gnl="3 10p _l">_l: kendisi sol</div>
-        <div data-gnl="3 10p _o">_o: kendisi orta</div>
-        <div data-gnl="3 10p _s">_s: kendisi sağ</div>
+        <div data-gnl="3 /10 _l">_l: kendisi sol</div>
+        <div data-gnl="3 /10 _o">_o: kendisi orta</div>
+        <div data-gnl="3 /10 _s">_s: kendisi sağ</div>
       </div>
       <div style="height:150px;">
-        <div data-gnl="3 10p _lt">_lt: kendisi solüst</div>
-        <div data-gnl="3 10p _as">_as: kendisi altsağ</div>
+        <div data-gnl="3 /10 _lt">_lt: kendisi solüst</div>
+        <div data-gnl="3 /10 _as">_as: kendisi altsağ</div>
       </div>
       <div style="height:150px;">
-        <div data-gnl="3 10p _la">_la: kendisi solalt</div>
-        <div data-gnl="3 10p _ts">_ts: kendisi üstsağ</div>
+        <div data-gnl="3 /10 _la">_la: kendisi solalt</div>
+        <div data-gnl="3 /10 _ts">_ts: kendisi üstsağ</div>
       </div>
     </div>
   </div>
   {% highlight html %}
     <div style="height:150px;">
-      <div data-gnl="3 10p _t">_t: kendisi üst</div>
-      <div data-gnl="3 10p _o">_o: kendisi orta</div>
-      <div data-gnl="3 10p _a">_a: kendisi alt</div>
+      <div data-gnl="3 /10 _t">_t: kendisi üst</div>
+      <div data-gnl="3 /10 _o">_o: kendisi orta</div>
+      <div data-gnl="3 /10 _a">_a: kendisi alt</div>
     </div>
     <div style="height:150px;">
-      <div data-gnl="3 10p _l">_l: kendisi sol</div>
-      <div data-gnl="3 10p _o">_o: kendisi orta</div>
-      <div data-gnl="3 10p _s">_s: kendisi sağ</div>
+      <div data-gnl="3 /10 _l">_l: kendisi sol</div>
+      <div data-gnl="3 /10 _o">_o: kendisi orta</div>
+      <div data-gnl="3 /10 _s">_s: kendisi sağ</div>
     </div>
     <div style="height:150px;">
-      <div data-gnl="3 10p _lt">_lt: kendisi solüst</div>
-      <div data-gnl="3 10p _as">_as: kendisi altsağ</div>
+      <div data-gnl="3 /10 _lt">_lt: kendisi solüst</div>
+      <div data-gnl="3 /10 _as">_as: kendisi altsağ</div>
     </div>
     <div style="height:150px;">
-      <div data-gnl="3 10p _la">_la: kendisi solalt</div>
-      <div data-gnl="3 10p _ts">_ts: kendisi üstsağ</div>
+      <div data-gnl="3 /10 _la">_la: kendisi solalt</div>
+      <div data-gnl="3 /10 _ts">_ts: kendisi üstsağ</div>
     </div>
   {% endhighlight %}
 
@@ -278,7 +278,7 @@ title: Konumlama - Kap Örgüsü
   <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
-      <div data-gnl="1 2p uzat" style="height:500px;">
+      <div data-gnl="1 /2 uzat" style="height:500px;">
         <div data-gnl="0">
           uzat
         </div>
@@ -289,7 +289,7 @@ title: Konumlama - Kap Örgüsü
           uzat
         </div>
       </div>
-      <div data-gnl="1 2p" style="height:500px;">
+      <div data-gnl="1 /2" style="height:500px;">
         <div data-gnl="0 üstte-ol">
           üstte-ol
         </div>
@@ -303,7 +303,7 @@ title: Konumlama - Kap Örgüsü
     </div>
   </div>
   {% highlight html %}
-    <div data-gnl="1 2p uzat" style="height:500px;">
+    <div data-gnl="1 /2 uzat" style="height:500px;">
       <div data-gnl="0">
         uzat
       </div>
@@ -314,7 +314,7 @@ title: Konumlama - Kap Örgüsü
         uzat
       </div>
     </div>
-    <div data-gnl="1 2p" style="height:500px;">
+    <div data-gnl="1 /2" style="height:500px;">
       <div data-gnl="0 üstte-ol">
         üstte-ol
       </div>
@@ -397,53 +397,53 @@ title: Konumlama - Kap Örgüsü
     <h3>Önizleme</h3>
     <div class="önizleme">
       <div data-gnl="ters-dürme">
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           ters-dürme #1
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           ters-dürme #2
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           ters-dürme #3
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           ters-dürme #4
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           ters-dürme #5
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           ters-dürme #6
         </div>
       </div>
       <div data-gnl="ters-satır">
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           ters-satır #1
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           ters-satır #2
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           ters-satır #3
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           ters-satır #4
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           ters-satır #5
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           ters-satır #6
         </div>
       </div>
       <div data-gnl="ters-sütun">
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           ters-sütun #1
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           ters-sütun #2
         </div>
-        <div data-gnl="1 3p">
+        <div data-gnl="1 /3">
           ters-sütun #3
         </div>
       </div>
@@ -451,53 +451,53 @@ title: Konumlama - Kap Örgüsü
   </div>
   {% highlight html %}
     <div data-gnl="ters-dürme">
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         ters-dürme #1
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         ters-dürme #2
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         ters-dürme #3
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         ters-dürme #4
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         ters-dürme #5
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         ters-dürme #6
       </div>
     </div>
     <div data-gnl="ters-satır">
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         ters-satır #1
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         ters-satır #2
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         ters-satır #3
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         ters-satır #4
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         ters-satır #5
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         ters-satır #6
       </div>
     </div>
     <div data-gnl="ters-sütun">
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         ters-sütun #1
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         ters-sütun #2
       </div>
-      <div data-gnl="1 3p">
+      <div data-gnl="1 /3">
         ters-sütun #3
       </div>
     </div>
