--- a/1.0/en/kap-orgusu/bicim-duzeni.html
+++ b/1.0/en/kap-orgusu/bicim-duzeni.html
@@ -28,27 +28,27 @@ title: Type Layout - Grid System
   <h3>Example</h3>
   <div class="önizleme">
     <div data-gnl="container">
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="1 /3">
+        1 /3
       </div>
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="1 /3">
+        1 /3
       </div>
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="1 /3">
+        1 /3
       </div>
     </div>
   </div>
   {% highlight html %}
   <div data-gnl="container">
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
   </div>
   {% endhighlight %}
@@ -81,11 +81,11 @@ title: Type Layout - Grid System
     <div data-gnl="0">
       0
     </div>
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
   </div>
 </div>  
@@ -93,11 +93,11 @@ title: Type Layout - Grid System
   <div data-gnl="0">
     0
   </div>
-  <div data-gnl="1 3p">
-    1 3p
+  <div data-gnl="1 /3">
+    1 /3
   </div>
-  <div data-gnl="1 3p">
-    1 3p
+  <div data-gnl="1 /3">
+    1 /3
   </div>
 {% endhighlight %}
 
@@ -109,7 +109,7 @@ title: Type Layout - Grid System
   <div class="örnek">
     <h3>Preview</h3>
     <div class="önizleme">
-      <div data-gnl="1 24p no-overflow">
+      <div data-gnl="1 /24 no-overflow">
         Are you the one we can not write over?
       </div>
       <div data-gnl="no-wrap">
@@ -129,7 +129,7 @@ title: Type Layout - Grid System
     </div>
   </div>
   {% highlight html %}
-    <div data-gnl="1 24p no-overflow">
+    <div data-gnl="1 /24 no-overflow">
       Are you the one we can not write over?
     </div>
     <div data-gnl="no-wrap">
