--- a/1.0/en/kap-orgusu/ornekler.html
+++ b/1.0/en/kap-orgusu/ornekler.html
@@ -36,7 +36,7 @@ title: Örnekler
       </div>
       <div class="kap_gnl-0p">
         <h2>Parça</h2>
-        <p>İçinde bulunan genişliği belirtilen parça miktarına bölerek yazılan genişlik yöntemidir. 5p 6p 8p 9p 10p 12p 16p 18p 20p 24p düzenini aynı anda kullanabilirsiniz.</p>
+        <p>İçinde bulunan genişliği belirtilen parça miktarına bölerek yazılan genişlik yöntemidir. /5 /6 /8 /9 /10 /12 /16 /18 /20 /24 düzenini aynı anda kullanabilirsiniz.</p>
         <iframe width="100%" height="300" src="//jsfiddle.net/deveb/ke420f56/embedded/result,html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
       </div>
       <div class="kap_gnl-0p">
