--- a/1.0/en/kap-orgusu/parca-duzeni.html
+++ b/1.0/en/kap-orgusu/parca-duzeni.html
@@ -6,44 +6,44 @@ title: Piece Layout - Grid System
     The most used feature of the grid system is the piece layout. The piece layout is designed for you to create templates with stable percentage width. It offers use of all part layouts from 1 piece to 24 pieces. 
   </p>
   <p>
-    "NUMBER NUMBERp" values are used in the html file by writing to the desired display system. NUMBER can be between 1 and 24. For example, you want to divide the page into two and make the left side twice as wide as the right side. For this you can define the values data-gnl="2 3p" data-gnl="1 3p".
+    "NUMBER /NUMBER" values are used in the html file by writing to the desired display system. NUMBER can be between 1 and 24. For example, you want to divide the page into two and make the left side twice as wide as the right side. For this you can define the values data-gnl="2 /3" data-gnl="1 /3".
   </p> 
   <p></p>
-  <div data-gnl="1 1p ortada">
+  <div data-gnl="1 /1 ortada">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/NKGZ8HWdnFw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
 
-  <h3>Piece Layout "NUMBER NUMBERp" Usage</h3>
+  <h3>Piece Layout "NUMBER /NUMBER" Usage</h3>
 
   <p>
-    When you write a piece layout to create a grid, you say something to the browser; "I will use the width of the piece as NUMBER by dividing the width I find into equal parts as NUMBER".For example, if you want to use half of the main width, you can use "1 2p", "2 4p", "3 6p", "4 8p", "5 10p", "6 12p", "7 14p", "8 16p", "9 18p", "10 20p", "11 22p" or "12 24p".
+    When you write a piece layout to create a grid, you say something to the browser; "I will use the width of the piece as NUMBER by dividing the width I find into equal parts as NUMBER".For example, if you want to use half of the main width, you can use "1 /2", "2 /4", "3 /6", "4 /8", "5 /10", "6 /12", "7 /14", "8 /16", "9 /18", "10 /20", "11 /22" or "12 /24".
   </p>
 
   <p>
-    Let's imagine a sample template before we start using the Piece layout. Have a place torn into 3 equal widths. In a place using a 20 piece arrangement, take the form of 3 columns with different widths between them. We can write our first example with the value "1 3p". We can write the other as "3 20p", "10 20p", "7 20p".
+    Let's imagine a sample template before we start using the Piece layout. Have a place torn into 3 equal widths. In a place using a 20 piece arrangement, take the form of 3 columns with different widths between them. We can write our first example with the value "1 /3". We can write the other as "3 /20", "10 /20", "7 /20".
   </p>
   <div class="örnek">
     <h3>Preview: Example 1</h3>
     <div class="önizleme">
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="1 /3">
+        1 /3
       </div>
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="1 /3">
+        1 /3
       </div>
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="1 /3">
+        1 /3
       </div>
     </div>
     {% highlight html %}
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
     {% endhighlight %}
   </div>
@@ -51,25 +51,25 @@ title: Piece Layout - Grid System
   <div class="örnek">
     <h3>Preview: Example 2</h3>
     <div class="önizleme">
-      <div data-gnl="3 20p">
-        3 20p
+      <div data-gnl="3 /20">
+        3 /20
       </div>
-      <div data-gnl="10 20p">
-        10 20p
+      <div data-gnl="10 /20">
+        10 /20
       </div>
-      <div data-gnl="7 20p">
-        7 20p
+      <div data-gnl="7 /20">
+        7 /20
       </div>
     </div>
     {% highlight html %}
-    <div data-gnl="3 20p">
-      3 20p
+    <div data-gnl="3 /20">
+      3 /20
     </div>
-    <div data-gnl="10 20p">
-      10 20p
+    <div data-gnl="10 /20">
+      10 /20
     </div>
-    <div data-gnl="7 20p">
-      7 20p
+    <div data-gnl="7 /20">
+      7 /20
     </div>
     {% endhighlight %}
   </div>
@@ -78,81 +78,81 @@ title: Piece Layout - Grid System
     <h3>Preview: Example 3</h3>
     <p>Example 1 and 2 together.</p>
     <div class="önizleme">
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="1 /3">
+        1 /3
       </div>
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="1 /3">
+        1 /3
       </div>
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="1 /3">
+        1 /3
       </div>
-      <div data-gnl="3 20p">
-        3 20p
+      <div data-gnl="3 /20">
+        3 /20
       </div>
-      <div data-gnl="10 20p">
-        10 20p
+      <div data-gnl="10 /20">
+        10 /20
       </div>
-      <div data-gnl="7 20p">
-        7 20p
+      <div data-gnl="7 /20">
+        7 /20
       </div>
     </div>
     {% highlight html %}
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
-    <div data-gnl="3 20p">
-      3 20p
+    <div data-gnl="3 /20">
+      3 /20
     </div>
-    <div data-gnl="10 20p">
-      10 20p
+    <div data-gnl="10 /20">
+      10 /20
     </div>
-    <div data-gnl="7 20p">
-      7 20p
+    <div data-gnl="7 /20">
+      7 /20
     </div>
     {% endhighlight %}
   </div>
 
-  <h3>"NUMBER NUMBERp" >> "NUMBER NUMBERp" Usage</h3>
+  <h3>"NUMBER /NUMBER" >> "NUMBER /NUMBER" Usage</h3>
   <p>
-    By using this scheme, you tell the browser: "NUMBERp in the parent html tag is the default value for child tags. At the same time, the NUMBER I mention at the same time as the parent is the width of this label. All child tags are in this track order until the axel is specified. I can specify the width by typing NUMBER in the Child tags. If you specify NUMBERp in at least one child tag, this value becomes the new tag. The number value will also be the amount of parts of the new order."
+    By using this scheme, you tell the browser: "NUMBERp in the parent html tag is the default value for child tags. At the same time, the NUMBER I mention at the same time as the parent is the width of this label. All child tags are in this track order until the axel is specified. I can specify the width by typing NUMBER in the Child tags. If you specify /NUMBER in at least one child tag, this value becomes the new tag. The number value will also be the amount of parts of the new order."
   </p>
   <div class="örnek">
     <h3>Preview</h3>
     <div class="önizleme">
-      <div data-gnl="2 2p">
-        <div data-gnl="1 4p">
+      <div data-gnl="2 /2">
+        <div data-gnl="1 /4">
           1/4 piece of screens width.
         </div>
-        <div data-gnl="1 4p">
+        <div data-gnl="1 /4">
           1/4 piece of screens width.
         </div>
-        <div data-gnl="1 4p">
+        <div data-gnl="1 /4">
           1/4 piece of screens width.
         </div>
-        <div data-gnl="1 4p">
+        <div data-gnl="1 /4">
           1/4 piece of screens width.
         </div>
       </div>
     </div>
     {% highlight html %}
-    <div data-gnl="2 2p">
-      <div data-gnl="1 4p">
+    <div data-gnl="2 /2">
+      <div data-gnl="1 /4">
         1/4 piece of screens width.
       </div>
-      <div data-gnl="1 4p">
+      <div data-gnl="1 /4">
         1/4 piece of screens width.
       </div>
-      <div data-gnl="1 4p">
+      <div data-gnl="1 /4">
         1/4 piece of screens width.
       </div>
-      <div data-gnl="1 4p">
+      <div data-gnl="1 /4">
         1/4 piece of screens width.
       </div>
     </div>
@@ -167,49 +167,49 @@ title: Piece Layout - Grid System
     <h3>Preview</h3>
     <div class="önizleme">
       <div>
-        <div data-gnl="1g">
-          1g
+        <div data-gnl="1 /">
+          1 /
         </div>
-        <div data-gnl="4g">
-          4g
+        <div data-gnl="4 /">
+          4 /
         </div>
-        <div data-gnl="2g">
-          2g
+        <div data-gnl="2 /">
+          2 /
         </div>
       </div>
       <div>
-        <div data-gnl="1 7p">
-          1 7p
+        <div data-gnl="1 /7">
+          1 /7
         </div>
-        <div data-gnl="4 7p">
-          4 7p
+        <div data-gnl="4 /7">
+          4 /7
         </div>
-        <div data-gnl="2 7p">
-          2 7p
+        <div data-gnl="2 /7">
+          2 /7
         </div>
       </div>
     </div>
     {% highlight html %}
     <div>
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 /">
+        1 /
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 /">
+        4 /
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 /">
+        2 /
       </div>
     </div>
     <div>
-      <div data-gnl="1 7p">
-        1 7p
+      <div data-gnl="1 /7">
+        1 /7
       </div>
-      <div data-gnl="4 7p">
-        4 7p
+      <div data-gnl="4 /7">
+        4 /7
       </div>
-      <div data-gnl="2 7p">
-        2 7p
+      <div data-gnl="2 /7">
+        2 /7
       </div>
     </div>
     {% endhighlight %}
