--- a/1.0/tr/kap-orgusu/bicim-duzeni.html
+++ b/1.0/tr/kap-orgusu/bicim-duzeni.html
@@ -32,27 +32,27 @@ title: Biçim Düzeni - Kap Örgüsü
   <h3>Örnek</h3>
   <div class="önizleme">
     <div data-gnl="kap">
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="1 /3">
+        1 /3
       </div>
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="1 /3">
+        1 /3
       </div>
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="4">
+        4
       </div>
     </div>
   </div>
   {% highlight html %}
   <div data-gnl="kap">
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="4">
+      4
     </div>
   </div>
   {% endhighlight %}
@@ -86,11 +86,11 @@ title: Biçim Düzeni - Kap Örgüsü
     <div data-gnl="0">
       0
     </div>
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="4">
+      4
     </div>
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="6">
+      6
     </div>
   </div>
 </div>  
@@ -98,11 +98,11 @@ title: Biçim Düzeni - Kap Örgüsü
   <div data-gnl="0">
     0
   </div>
-  <div data-gnl="1 3p">
-    1 3p
+  <div data-gnl="4">
+    4
   </div>
-  <div data-gnl="1 3p">
-    1 3p
+  <div data-gnl="6">
+    6
   </div>
 {% endhighlight %}
 
@@ -114,7 +114,7 @@ title: Biçim Düzeni - Kap Örgüsü
   <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
-      <div data-gnl="1 24p kaymadan">
+      <div data-gnl="1 /24 kaymadan">
         Taşmadan yazamadıklarımızdan mısınız?
       </div>
       <div data-gnl="dürmeden">
@@ -134,7 +134,7 @@ title: Biçim Düzeni - Kap Örgüsü
     </div>
   </div>
   {% highlight html %}
-    <div data-gnl="1 24p kaymadan">
+    <div data-gnl="1 /24 kaymadan">
       Taşmadan yazamadıklarımızdan mısınız?
     </div>
     <div data-gnl="dürmeden">
