--- a/1.0/tr/kap-orgusu/parca-duzeni.html
+++ b/1.0/tr/kap-orgusu/parca-duzeni.html
@@ -6,46 +6,46 @@ title: Parça Düzeni - Kap Örgüsü
     Kap örgüsünün en çok kullanılan özelliği parça düzenidir. Parça düzeni kararlı
     yüzdesel genişliklerle şablonlar oluşturmanız için hazırlanmıştır. Tek parçadan
     yani 1 parçadan 24 parçaya kadar tüm parça düzenlerini kullanıma sunar.
-    "<span data-metin="ana">SAYI SAYIp</span>" değerleri html dosyasında istenilen
+    "<span data-metin="ana">SAYI /SAYI</span>" değerleri html dosyasında istenilen
     ekran örgüsüne yazılarak kullanılır. SAYI 1 ile 24 arasında değer alabilir.
     Örneğin sayfayı ikiye ayırıp sol tarafın sağ taraftan iki kat daha geniş
-    olmasını istiyorsunuz. Bunun için <a href="/1.0/tr/ekran-orgusu.html">data-gnl</a>="2 3p"
-     <a href="/1.0/tr/ekran-orgusu.html">data-gnl</a>="1 3p" değerlerini tanımlaybilirsiniz.
-   </p>
+    olmasını istiyorsunuz. Bunun için <a href="/1.0/tr/ekran-orgusu.html">data-gnl</a>="2 /3"
+    <a href="/1.0/tr/ekran-orgusu.html">data-gnl</a>="1 /3" değerlerini tanımlaybilirsiniz.
+  </p>
 
-   <p></p>
-  <div data-gnl="1 1p ortada">
+  <p></p>
+  <div data-gnl="o">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/NKGZ8HWdnFw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
 
-  <h3>Parça Düzeni "SAYI SAYIp" Kullanım Yöntemi</h3>
+  <h3>Parça Düzeni "SAYI /SAYI" Kullanım Yöntemi</h3>
 
-  <p>Kap oluşturmak için bir parça düzeni yazdığınız an tarayıcılara şunu dersiniz; "Bulunduğum genişliği SAYIp kadar eşit parçaya bölerek SAYI kadar parça genişliğini kullanacağım". Örneğin siz bulunduğunuz genişliğin yarısı kadar bir genişlik kullanmak istiyorsanız "1 2p", "2 4p", "3 6p", "4 8p", "5 10p", "6 12p", "7 14p", "8 16p", "9 18p", "10 20p", "11 22p" veya "12 24p" değerlerinden dilediğiniz bir tanesini kullanmanız yeterlidir.</p>
+  <p>Kap oluşturmak için bir parça düzeni yazdığınız an tarayıcılara şunu dersiniz; "Bulunduğum genişliği /SAYI kadar eşit parçaya bölerek SAYI kadar parça genişliğini kullanacağım". Örneğin siz bulunduğunuz genişliğin yarısı kadar bir genişlik kullanmak istiyorsanız "1 /2", "2 /4", "3 /6", "4 /8", "5 /10", "6 /12", "7 /14", "8 /16", "9 /18", "10 /20", "11 /22" veya "12 /24" değerlerinden dilediğiniz bir tanesini kullanmanız yeterlidir.</p>
 
-  <p>Dilediğimiz parça düzenini kullanmaya başlamadan önce örnek bir şablonu hayal edelim. Bir çalışmamız 3 eşit genişliğe parçalanmış olsun, bir çalışmamızda 20 parça düzeni kullanılarak kendi aralarında farklı genişliklere sahip 3 sütun şeklinde olsun. İlk örneğimizi "1 3p" değerini uygun yerlere yazarak yapabiliriz. Diğerini ise "3 20p", "10 20p", "7 20p" olarak hazırlayalım.</p>
+  <p>Dilediğimiz parça düzenini kullanmaya başlamadan önce örnek bir şablonu hayal edelim. Bir çalışmamız 3 eşit genişliğe parçalanmış olsun, bir çalışmamızda 20 parça düzeni kullanılarak kendi aralarında farklı genişliklere sahip 3 sütun şeklinde olsun. İlk örneğimizi "1 /3" değerini uygun yerlere yazarak yapabiliriz. Diğerini ise "3 /20", "10 /20", "7 /20" olarak hazırlayalım.</p>
   <p></p>
   <div class="örnek">
     <h3>Önizleme: Örnek 1</h3>
     <div class="önizleme">
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="1 /3">
+        1 /3
       </div>
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="1 /3">
+        1 /3
       </div>
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="1 /3">
+        1 /3
       </div>
     </div>
     {% highlight html %}
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
     {% endhighlight %}
   </div>
@@ -53,25 +53,25 @@ title: Parça Düzeni - Kap Örgüsü
   <div class="örnek">
     <h3>Önizleme: Örnek 2</h3>
     <div class="önizleme">
-      <div data-gnl="3 20p">
-        3 20p
+      <div data-gnl="3 /20">
+        3 /20
       </div>
-      <div data-gnl="10 20p">
-        10 20p
+      <div data-gnl="10 /20">
+        10 /20
       </div>
-      <div data-gnl="7 20p">
-        7 20p
+      <div data-gnl="7 /20">
+        7 /20
       </div>
     </div>
     {% highlight html %}
-    <div data-gnl="3 20p">
-      3 20p
+    <div data-gnl="3 /20">
+      3 /20
     </div>
-    <div data-gnl="10 20p">
-      10 20p
+    <div data-gnl="10 /20">
+      10 /20
     </div>
-    <div data-gnl="7 20p">
-      7 20p
+    <div data-gnl="7 /20">
+      7 /20
     </div>
     {% endhighlight %}
   </div>
@@ -80,83 +80,83 @@ title: Parça Düzeni - Kap Örgüsü
     <h3>Önizleme: Örnek 3</h3>
     <p>Örnek 1 ve 2'yi bir arada işlemek</p>
     <div class="önizleme">
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="1 /3">
+        1 /3
       </div>
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="1 /3">
+        1 /3
       </div>
-      <div data-gnl="1 3p">
-        1 3p
+      <div data-gnl="1 /3">
+        1 /3
       </div>
-      <div data-gnl="3 20p">
-        3 20p
+      <div data-gnl="3 /20">
+        3 /20
       </div>
-      <div data-gnl="10 20p">
-        10 20p
+      <div data-gnl="10 /20">
+        10 /20
       </div>
-      <div data-gnl="7 20p">
-        7 20p
+      <div data-gnl="7 /20">
+        7 /20
       </div>
     </div>
     {% highlight html %}
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
-    <div data-gnl="1 3p">
-      1 3p
+    <div data-gnl="1 /3">
+      1 /3
     </div>
-    <div data-gnl="3 20p">
-      3 20p
+    <div data-gnl="3 /20">
+      3 /20
     </div>
-    <div data-gnl="10 20p">
-      10 20p
+    <div data-gnl="10 /20">
+      10 /20
     </div>
-    <div data-gnl="7 20p">
-      7 20p
+    <div data-gnl="7 /20">
+      7 /20
     </div>
     {% endhighlight %}
   </div>
 
   <p></p>
 
-  <h3>"SAYI SAYIp" >> "SAYI SAYIp" Kullanım Yöntemi</h3>
+  <h3>"SAYI /SAYI" >> "SAYI /SAYI" Kullanım Yöntemi</h3>
 
-  <p>Bu düzeni kullanarak bir kap yazdığınızda tarayıcıya şunu dersiniz; "Ana html etiketinde belirttiğim SAYIp yavru etiketlerin varsayılan değeri haline gelmiştir. Aynı zamanda ana etikette belirttiğim SAYI etiketin genişliğidir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzenine göre ölçeklenecektir. Yavru etiketlerde SAYI yazarak genişliklerimi belirtebilirim. Eğer yavru etiketlerden en az birinde SAYIp belirttiysem, bu belirttiğim değer etiketin yeni parça düzeni olurken SAYI değeri de yeni düzenin parça miktarı olacaktır."</p>
+  <p>Bu düzeni kullanarak bir kap yazdığınızda tarayıcıya şunu dersiniz; "Ana html etiketinde belirttiğim /SAYI yavru etiketlerin varsayılan değeri durumuna gelmiştir. Aynı zamanda ana etikette belirttiğim SAYI, etiketin genişliğidir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzenine göre ölçeklenecektir. Yavru etiketlerde SAYI yazarak genişliklerimi belirtebilirim. Eğer yavru etiketlerden en az birinde /SAYI belirttiysem, bu belirttiğim değer etiketin yeni parça düzeni olurken SAYI değeri de yeni düzenin parça değeri olacaktır."</p>
   <p></p>
   <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
-      <div data-gnl="2 2p">
-        <div data-gnl="1 4p">
+      <div data-gnl="2 /2">
+        <div data-gnl="1 /4">
           Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
         </div>
-        <div data-gnl="1 4p">
+        <div data-gnl="1 /4">
           Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
         </div>
-        <div data-gnl="1 4p">
+        <div data-gnl="1 /4">
           Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
         </div>
-        <div data-gnl="1 4p">
+        <div data-gnl="1 /4">
           Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
         </div>
       </div>
     </div>
     {% highlight html %}
-    <div data-gnl="2 2p">
-      <div data-gnl="1 4p">
+    <div data-gnl="2 /2p">
+      <div data-gnl="1 /4">
         Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
       </div>
-      <div data-gnl="1 4p">
+      <div data-gnl="1 /4">
         Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
       </div>
-      <div data-gnl="1 4p">
+      <div data-gnl="1 /4">
         Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
       </div>
-      <div data-gnl="1 4p">
+      <div data-gnl="1 /4">
         Tüm ekranlarda bulunduğu genişliğin 1/4'ünü kapla.
       </div>
     </div>
@@ -170,49 +170,49 @@ title: Parça Düzeni - Kap Örgüsü
     <h3>Önizleme</h3>
     <div class="önizleme">
       <div>
-        <div data-gnl="1g">
-          1g
+        <div data-gnl="1 /">
+          1 /
         </div>
-        <div data-gnl="4g">
-          4g
+        <div data-gnl="4 /">
+          4 /
         </div>
-        <div data-gnl="2g">
-          2g
+        <div data-gnl="2 /">
+          2 /
         </div>
       </div>
       <div>
-        <div data-gnl="1 7p">
-          1 7p
+        <div data-gnl="1 /7">
+          1 /7
         </div>
-        <div data-gnl="4 7p">
-          4 7p
+        <div data-gnl="4 /7">
+          4 /7
         </div>
-        <div data-gnl="2 7p">
-          2 7p
+        <div data-gnl="2 /7">
+          2 /7
         </div>
       </div>
     </div>
     {% highlight html %}
     <div>
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 /">
+        1 /
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 /">
+        4 /
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 /">
+        2 /
       </div>
     </div>
     <div>
-      <div data-gnl="1 7p">
-        1 7p
+      <div data-gnl="1 /7">
+        1 /7
       </div>
-      <div data-gnl="4 7p">
-        4 7p
+      <div data-gnl="4 /7">
+        4 /7
       </div>
-      <div data-gnl="2 7p">
-        2 7p
+      <div data-gnl="2 /7">
+        2 /7
       </div>
     </div>
     {% endhighlight %}
